# drumbox01

./: .gitignore  Cargo.toml  LICENSE  README  README.md  base.css  data.sqlite  index.html  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
app/: Channel.ts  Machine.ts  Sequencer.ts  UI.ts  index.tsx  main.ts  typings.d.ts
app/components/: channel.tsx  channels.tsx  main-panel.tsx  master.tsx  sequencer.tsx  speaker.tsx
app/components/channel/: base.tsx  header.tsx  headers.tsx  mixer.tsx  noise.tsx  osc.tsx
app/components/controls/: division.tsx  knob.tsx  selector.tsx  tempo.tsx
app/components/sequencer/: beat.tsx  sequence.tsx
app/data/: default.json  default.ts
app/modules/: Amp.ts  BaseModule.ts  Env.ts  Filter.ts  Noise.ts  Osc.ts
app/sass/: base.scss  channels.scss  controls.scss  master.scss  sequencer.scss  variables.scss
app/state/: action-types.ts  combine-reducers.ts  configure-store.ts  sagas.ts
app/state/actions/: channel.ts  master.ts  preset.ts  sequencer.ts
app/state/reducers/: channel.ts  index.ts  master.ts  presets.ts  sequencer.ts
app/state/services/: preset.ts
migrations/2017-10-26-011831_create_presets/: down.sql  up.sql
migrations/2017-10-27-161049_channels/: up.sql
migrations/2017-11-07-200721_create_sequences/: down.sql  up.sql
src/: Channel.ts  Machine.ts  Sequencer.ts  UI.ts  jquery.knob.d.ts  lib.rs  main.rs  main.ts  models.rs  tsconfig.json
src/modules/: Amp.ts  BaseModule.ts  Env.ts  Filter.ts  Noise.ts  Osc.ts
tests/: tests.rs
tests/app/state/: combine-reducers.test.ts
