[package]
name = "drumbox01"
version = "0.1.0"
authors = ["iain8 <iain@fastmail.com>"]
publish = false

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"

diesel = { version = "0.16.0", features = ["sqlite"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
dotenv = "0.9.0"

serde = "1.0"
serde_derive = "1.0"
